--- a/Components/Pages/Workers.razor
+++ b/Components/Pages/Workers.razor
@@ -7,6 +7,9 @@
 
 
 <h3>Workers</h3>
+
+<button class="btn btn-primary" @onclick="InsertData">Click me</button>
+
 @if (workers == null)
 {
     <p><em>Loading...</em></p>
@@ -15,7 +18,7 @@ else
 {
     @foreach (var worker in workers)
     {
-        <p>@worker.Worker_name @worker.Pesel </p>
+        <p>@worker.Worker_name @worker.Pesel @worker.Employment_date </p>
     }
 }
 
@@ -25,9 +28,17 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        string sql = "SELECT * FROM workers";
+        string sql = "SELECT * FROM workers;"; 
 
         workers = await _data.LoadData<WorkerModel, dynamic>(sql, new { }, _config.GetConnectionString("default"));
     }
 
+    private async Task InsertData()
+    {
+        string sql = "INSERT INTO workers (worker_name, worker_surname, position, employment_date, pesel) VALUES (@worker_name, @worker_surname, @position, @employment_date, @pesel);";
+        await _data.SaveData(sql, new { worker_name = "Bob", worker_surname = "Budowniczy", position = "Magazynier", employment_date = "2020-01-02", pesel = "90051902034" }, _config.GetConnectionString("default"));
+
+    }
+
 }
+
