--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -4,6 +4,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+
+@using MudBlazor
+
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MSOI
