--- a/Components/App.razor
+++ b/Components/App.razor
@@ -2,8 +2,10 @@
 @using Microsoft.AspNetCore.Components.Authorization
 
 <head>
+
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_framework/blazor.server.js"></script>
 </head>
 
 <CascadingAuthenticationState>
