--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 @* Required *@
 <MudThemeProvider />
-<MudPopoverProvider />
+@* <MudPopoverProvider />  *@
 
 @* Needed for dialogs *@
 <MudDialogProvider />
